# Encoder-DC-Motors

./: README.md
.github/workflows/: main.yml  mega-a.yml  mega-b.yml  pathplanning.yml
Arduino Mega A Encoder/src/: main.cpp
Arduino Mega B Motor/src/: main.cpp
Arduino Mega/src/: main.cpp  main.h  pins.h  simplepid.h
esp/: platformio.ini
esp/esp/include/: esp_now_com.h  stepperDrive.h
esp/include/: display.h  esp_now_com.h  servos.h
esp/src/: main.cpp
raspi/encoder_reader/: CMakeLists.txt  encoder_reader.cpp
raspi/eurobot-lidar/: CMakeLists.txt  lidar.h  main.cpp
raspi/main/: CMakeLists.txt  main  main.cpp  nohup.out  startbot.sh
raspi/main/src/: globals.h  lidar.h  main.cpp  main.h  pathplanning.cpp  pathplanning.h  structs.h
raspi/pathplanning/: CMakeLists.txt  lidar.h  main.cpp  pathplanning.cpp  pathplanning.h  run.sh  structs.h  ultra_simple
raspi/serial_reader/: CMakeLists.txt  make.sh  serial_reader  serial_reader.cpp
raspi/serial_sender/: CMakeLists.txt  arduino-code  serial_sender.cpp
sima/: README.md
sima/ESP32_bot/: platformio.ini
sima/ESP32_bot/include/: esp_now_com.h  servos.h  stepperDrive.h
sima/ESP32_bot/src/: main.cpp
sima/SIMA_debug/include/: com.h  paths.h
sima/SIMA_debug/src/: main.cpp
sima/main_controller/: platformio.ini
sima/main_controller/include/: esp_now_com.h  esp_now_com1.h  servos.h  stepperDrive.h
sima/main_controller/src/: main.cpp
sima/sima/: platformio.ini
sima/sima/include/: drive.h  paths.h  sensor.h
sima/sima/src/: main.cpp
